@@ -68,6 +68,30 @@ Username to use for the connection.
 Password to use for the connection.
 .IP "    --proxy"
 <host[:port]> use HTTP proxy on given host and port.
+.IP "    --exec-filter"
+Execute an external program to modify or drop URLs to download.
+.br
+Two parameters will be passed to the program, the first is the URL to analyse,
+second one is the level of depth where the URL was found parsing HTML.
+The standard output generated by the program is considered the new URL to enqueue for downloading. If no output is generated, the URL will be dropped.
+.br
+URLs contained in Metalink files are ignored by this option.
+.br
+For example, this script drops all URLs that contain a question mark:
+.HP 10
+.br
+#!/bin/sh
+.br
+mark=`echo "$1" | grep "?"`
+.br
+if [ "$mark" = "" ]; then
+.br
+  echo "$1"
+.br
+fi 
+.br
+
+.LP
 .SH "RECURSIVE DOWNLOAD OPTIONS"
 .IP "-d, --depth"
 Maximum recursion depth (0 for infinite, default = 1).
@@ -84,6 +108,7 @@ Follow FTP links from HTML documents.
 .SH "INPUT OPTIONS"
 .IP "-t, --option-file"
 Text file with list of options. The file accepts only long options without '--'.
+.br
 The lines starting with '#' are skipped.
 .IP "-f, --url-file"
 Text file with list of URLs to download. The lines starting with '#' are skipped.
@@ -91,13 +116,16 @@ Text file with list of URLs to download. The lines starting with '#' are skipped
 .IP "-l, --metalink-file"
 Metalink XML file to download.
 .IP "    --metalink-list-file"
-Text file with list of Metalink files to download. The lines starting with '#' are skipped.
+Text file with list of Metalink files to download.
+.br
+The lines starting with '#' are skipped.
 .IP "    --metalink-location"
 Comma-separated list of accepted countries.
 .IP "    --metalink-print-locations"
 Print full list of valid countries.
 .IP "    --metalink-continent"
 Comma-separated list of accepted continents.
+.br
 Valid values are: AF, AS, EU, NA, SA, OC, AN.
 .IP "    --metalink-print-continents"
 Print full list of valid continents.
