@@ -18,6 +18,7 @@ Features:
 -options to follow FTP links in HTML documents.
 -options to specify username and password for the connections.
 -option to specify a proxy for the connections.
+-option to execute an external program to filter URLs to download.
 -save web pages copying the site tree locally.
 -filtering of GIF, PNG and JPEG images by width and height.
 -save all images in a single directory.
