@@ -2,6 +2,9 @@ ChangeLog about Mulk: open source non-interactive multi-connection network
 downloader with image filtering and Metalink support (version 0.6.0)
 
 
+2012/02/02 Emanuele <pocoyo@users.sourceforge.net>
+	* new option to execute an external program to filter URLs to download
+
 2012/01/30 Emanuele <pocoyo@users.sourceforge.net>
 	* fix small problem, changes in libmulk didn't cause a mulk recompilation and shared library was compiled with a wrong define
 
@@ -13,7 +16,7 @@ downloader with image filtering and Metalink support (version 0.6.0)
 
 2011/08/24 Emanuele <pocoyo@users.sourceforge.net>
 	* fix to have correct parameters printed out when resuming metalink file download
-	* fix to avoid compiling MD2 chechsum when not present in openssl library
+	* fix to avoid compiling MD2 checksum when not present in openssl library
 	* enable warnings as error on compilation when debug flag is true
 	* fix to compile on 64bit machine
 
